test/semantic_errors/invalid_main_def2.mc
int main(int a) { /* not valid parameter */
    bool b;
    b = false;
    int a[];
    return a;
}